--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 *.log
-**/ElvGames/
-**/UI Project/
+ElvGames/
+UI Project/
 
 # By default unity supports Blender asset imports, *.blend1 blender files do not need to be commited to version control.
 *.blend1
