--- a/timedevil/.gitignore
+++ b/timedevil/.gitignore
@@ -101,3 +101,4 @@ InitTestScene*.unity*
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
 timedevil/ProjectSettings/ProjectSettings.asset
+/ProjectSettings.asset
