--- a/timedevil/.gitignore
+++ b/timedevil/.gitignore
@@ -13,6 +13,7 @@
 *.log
 ElvGames/
 UI Project/
+RafaelMatos/
 
 # By default unity supports Blender asset imports, *.blend1 blender files do not need to be commited to version control.
 *.blend1
