--- a/timedevil/.gitignore
+++ b/timedevil/.gitignore
@@ -14,6 +14,7 @@
 ElvGames/
 UI Project/
 RafaelMatos/
+tracksound/
 # By default unity supports Blender asset imports, *.blend1 blender files do not need to be commited to version control.
 *.blend1
 *.blend1.meta
