--- a/timedevil/.gitignore
+++ b/timedevil/.gitignore
@@ -15,6 +15,7 @@ ElvGames/
 UI Project/
 RafaelMatos/
 tracksound/
+PixelArtRPGMegaPack/
 # By default unity supports Blender asset imports, *.blend1 blender files do not need to be commited to version control.
 *.blend1
 *.blend1.meta
