--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ UI Project/
 RafaelMatos/
 tracksound/
 PixelArtRPGMegaPack/
+Pixel Cartoon Effects 2d Pixelate Toon Sprite Sheet Effects/
 # By default unity supports Blender asset imports, *.blend1 blender files do not need to be commited to version control.
 *.blend1
 *.blend1.meta
